--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,7 @@
 
 <h1>My First Heading, ADDING A CHANGE</h1>
 
-<p>My first paragraph.</p>
+<p>My first paragraph. THIS IS A LOCALLY ADDED CHANGE.</p>
 
 </body>
 </html>
