--- a/index.htm
+++ b/index.htm
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <title>Test Website</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+
 <body>
 
 <h1>My First Heading</h1>
