--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <title>Test Website</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+
 <body>
 
-<h1>My First Heading, ADDING A CHANGE</h1>
+<h1>My First Heading</h1>
 
-<p>My first paragraph. THIS IS A LOCALLY ADDED CHANGE.</p>
+<p>My first paragraph.</p>
 
 </body>
 </html>
